force-app/main/default/objects/OutOfOffice__c/OutOfOffice__c.object-meta.xml
<CustomObject>
    <label>OutOfOffice</label>
    <nameField>
        <displayFormat>{YYYY}/{MM}/{DD}-{0}</displayFormat>
        <label>OutOfOffice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OutOfOffices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>