force-app/main/default/objects/OutOfOffice__c/recordTypes/PTO_OOO.recordType-meta.xml
<RecordType>
    <fullName>PTO_OOO</fullName>
    <active>true</active>
    <label>PTO OOO</label>
</RecordType>