force-app/main/default/objects/OutOfOffice__c/recordTypes/Vacation.recordType-meta.xml
<RecordType>
    <fullName>Vacation</fullName>
    <active>true</active>
    <label>Vacation</label>
</RecordType>