force-app/main/default/objects/OutOfOffice__c/recordTypes/Weekly_OOO.recordType-meta.xml
<RecordType>
    <fullName>Weekly_OOO</fullName>
    <active>true</active>
    <label>Weekly OOO</label>
</RecordType>